2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* telepathy/connection.c: (_sms_connection_create_handle_repos):
	* telepathy/im-channel-factory.c:
	(sms_im_channel_factory_iface_request):
	* telepathy/im-channel.c: (sms_im_channel_send):
	Fix utter stupidness in the contact repo, thanks to Simon McVittie,
	and make sending work

2007-11-07  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_poll):
	Fix a crasher in the random text sending

	* telepathy/im-channel-factory.c:
	(sms_im_channel_factory_iface_request), (new_sms):
	* telepathy/im-channel.c: (sms_im_channel_send):
	Try to implement the sending part, fails miserably because the
	handle we get is our own bdaddr, what the

2007-11-07  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_poll),
	(phonemgr_listener_connect), (phonemgr_listener_disconnect),
	(phonemgr_listener_init): Only send new messages when we're
	"connected" in the dummy backend, and randomise a bit the messages
	and senders

	* telepathy/im-channel-factory.c: (sms_im_channel_factory_init),
	(sms_im_channel_factory_set_property),
	(sms_im_channel_factory_iface_close_all), (new_sms),
	(set_im_channel_factory_listener): Connect to the "message" signal
	and receive messages without crashing, disconnect from the signal
	when all the channels are closed

2007-11-07  Bastien Nocera  <hadess@hadess.net>

	* telepathy/connection-manager.c:
	(sms_connection_manager_get_sms_connection):
	Modify for changes below

	* telepathy/connection.h:
	* telepathy/connection.c:
	(sms_connection_get_unique_connection_name),
	(_sms_connection_start_connecting), (_contact_normalize),
	(_sms_connection_shut_down), (sms_connection_get_property),
	(sms_connection_set_property), (sms_connection_finalize),
	(sms_connection_class_init), (sms_connection_init):
	Add the PhonemgrListener as a property (so it's available for
	the IM channel factory), make the bdaddr private as well
